	* m2/patches/gcc/trunk/05-patches:  (regenerated)
	* m2/patches/gcc/trunk/06-patches:  (regenerated)
	* m2/patches/gcc/trunk/07-patches:  (regenerated)
	* m2/patches/gcc/trunk/08-patches:  (regenerated)
	* m2/patches/gcc/trunk/09-patches:  (regenerated)
	* m2/patches/gcc/trunk/10-patches:  (regenerated)
	* m2/Make-lang.in:  updated the paths for mc bootstrap after
	  stem directory name has changed.

2019-11-11      Gaius Mulley <gaius.mulley@southwales.ac.uk>

	* gm2 (renamed) m2.
	* m2/Make-lang.in:  changed all references of gm2 to m2.
          (GM2_FOR_TARGET) removed.  Language name is m2, modula-2
          or modula2.
	* m2/gm2spec.c:  huge tidy up reflecting the feedback from the GCC
          mailing list.  Libraries are now checked and third party
          libraries can be installed alongside gm2 libraries.
	* m2/configure:  regnerated.
	* m2/configure.in:  (removed) and replaced by configure.ac.
	* m2/configure.ac:  New file.
	* m2/configure.ac:  (opendir) checked.
          (dirent.h) checked.  (sys/types.h) checked.
        * m2/gm2config.h.in:  (HAVE_DIRENT_H) added.
          (HAVE_OPENDIR) added.  (HAVE_SYS_TYPES_H) added.
	* m2/gm2spec.c:  removed unused macros.  Added
          library checking code.  Removed library synonyms.
          (check_valid_list) added.  (check_valid_library) added.
          (library_installed) added.  Changed all boolean ints
          to bool.  Tidied up formatting to GNU Coding standards.
          Use gcc_assert instead of assert.  Use GCC error mechanism.
          Renamed printOption to print_option.
	* m2/lang-options.h:  -fgm2-version renamed as -fm2-version.
	* m2/lang.opt:  -fgm2-version renamed as -fm2-version.
	* m2/tools-src/makeSystem:  added parameter 5 check (compiler
          target).
	* many include files changed to reflect new directory stem name.
	* m2/gm2-gcc/m2assert.c:  modified include path.
	* m2/gm2-gcc/m2block.c:  modified include path.
	* m2/gm2-gcc/m2builtins.c:  modified include path.